# voicemate-id

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
demo/: conversation.json  gen_frames.py
src/voicemate/: __init__.py  __main__.py  bot.py  config.py  llm.py  memory.py  stt.py  tts.py
tests/: test_config.py  test_memory.py
